<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baby_yeti</name>
  <version>0.0.0</version>
  <description>The Baby Yeti testbed, but in ROS2.</description>
  <maintainer email="dcutting@umich.edu">David Cutting</maintainer>
  <maintainer email="sleones@umich.edu">Shawn Leones</maintainer>
  <maintainer email="nlemus@umich.edu">Nathan Lemus</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
