<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baby_yeti_gazebo</name>
  <version>0.0.0</version>
  <description>A package for simulating the Baby Yeti platform in Gazebo with ROS2</description>
  <maintainer email="dcutting@umich.edu">David Cutting</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depends>baby_yeti_description</depends>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
